--- a/app/src/main/res/layout/activity_device_alarm_result.xml
+++ b/app/src/main/res/layout/activity_device_alarm_result.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:background="@color/white">
 
     <include
         android:id="@+id/layoutTop"
@@ -11,90 +11,88 @@
 
     <LinearLayout
         android:id="@+id/layoutButtons"
-        android:layout_below="@id/layoutTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/layoutTop"
         android:orientation="vertical"
-        android:padding="10dp"
-        >
+        android:padding="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/textAlarmNotify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="@string/device_opt_alarm_notify"
-                android:textSize="16dp"
                 android:textColor="@color/demo_title"
-                />
+                android:textSize="16dp" />
+
             <ImageButton
                 android:id="@+id/btnSwitchAlarmNotify"
                 android:layout_width="48dp"
                 android:layout_height="25dp"
-                android:layout_toRightOf="@id/textAlarmNotify"
-                android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/textAlarmNotify"
                 android:background="@color/transparent"
                 android:scaleType="fitCenter"
                 android:src="@drawable/icon_switch_check" />
         </LinearLayout>
+
         <Button
             android:id="@+id/btnAlarmConfig"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_margin="5dp"
+            android:background="@drawable/common_button_selector_blue"
+            android:maxLines="1"
             android:padding="8dp"
             android:text="@string/device_opt_alarm_config"
             android:textColor="@color/white"
-            android:background="@drawable/common_button_selector_blue"
-            android:textSize="16dp"
-            android:maxLines="1"
-            />
-        <Button 
+            android:textSize="16dp" />
+
+        <Button
             android:id="@+id/btnLanAlarmTest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/btnAlarmConfig"
             android:layout_margin="5dp"
+            android:layout_toLeftOf="@id/btnAlarmConfig"
+            android:background="@drawable/common_button_selector_blue"
+            android:maxLines="1"
             android:padding="8dp"
             android:text="@string/device_lan_alarm_test"
             android:textColor="@color/white"
-            android:background="@drawable/common_button_selector_blue"
-            android:textSize="16dp"
-            android:maxLines="1"
-            />
-        
+            android:textSize="16dp" />
+
     </LinearLayout>
-    
-    <View 
+
+    <View
         android:id="@+id/divLine"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_below="@id/layoutButtons"
-        android:background="@color/bg_gray"
-        />
-    
-    <ListView 
+        android:background="@color/bg_gray" />
+
+    <ListView
         android:id="@+id/listAlarmInfo"
-        android:layout_below="@id/divLine"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:listSelector="@drawable/common_list_selector"
+        android:layout_below="@id/divLine"
         android:footerDividersEnabled="true"
-        />
-    
-    <Button 
+        android:listSelector="@drawable/common_list_selector" />
+
+    <Button
         android:id="@+id/btnSelectDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:padding="10dp"
         android:background="#80000000"
+        android:padding="10dp"
         android:textColor="@drawable/common_text_selector"
-        android:textSize="18dp"
-        />
+        android:textSize="18dp" />
 </RelativeLayout>
